lib/kube/shared/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $KUBE_APP-deployment
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
    version: $GITHUB_SHA
  annotations:
    secrets.doppler.com/reload: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $KUBE_APP
  template:
    metadata:
      labels:
        app: $KUBE_APP
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: $KUBE_APP
          image: $KUBE_DEPLOYMENT_IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              memory: '700Mi'
            limits:
              memory: '1200Mi'
          ports:
            - containerPort: 8080
