lib/kube/shared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $KUBE_APP-service
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: $KUBE_APP

---

apiVersion: v1
kind: Service
metadata:
  name: temporal
  namespace: $KUBE_NS
  labels:
    app: temporal
spec:
  type: NodePort
  ports:
    - port: 7233
      targetPort: 7233
  selector:
    app: temporal

---

apiVersion: v1
kind: Service
metadata:
  name: temporal
  namespace: $KUBE_NS
  labels:
    app: temporal
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: temporal
